--- a/clientBlogs/src/components/css/FAQ_box.css
+++ b/clientBlogs/src/components/css/FAQ_box.css
@@ -1,42 +1,10 @@
-.FAQcontainer{
-    display: flex;
-    flex-direction: column;
-    height: 100vh;
-    width: 100vw;
-    gap: 10px;
-  
-}
-
-.allboxes{
-    display: flex;
-    flex-direction: column;
-    margin-top: 40px;
-    gap: 20px;
-    align-items: center;
-    justify-content: center;
-}
-
-
-
-.FAQtext{
-    color: #FFF;
-font-family: Cardo;
-font-size: 45px;
-font-style: normal;
-font-weight: 700;
-letter-spacing: 2.25px;
-text-align: center;
-transform: translateY(60px);
-}
-
-
-
-
-
 .FAQ_ques .row1{
+    display: flex;
+    flex-direction: column;
+    gap: none;
     justify-content: space-between;
-    width:60vw;
-    height: 7vh;
+    width:65vw;
+    height: 7.5vh;
     border-radius: 9px;
     background: #2F2F2F;
     transform: translateY(80px);
@@ -44,9 +12,10 @@ transform: translateY(60px);
 
 
 }
+
 .FAQ_ques .label1{
-padding: 10px;
-}
+    padding: 10px;
+    }
 
 .FAQ_ques .whatis{
     color: #636363;
@@ -68,31 +37,29 @@ font-weight: 700;
 line-height: normal;
 letter-spacing: 1.013px;
 }
-/* 
-    .FAQDrop{
-        position: relative;
-    } */
+
+
 
  .FAQDrop .row2{
-    width: 60vw;
-    height: 10vh;
+    height: 11vh;
 align-items: center;
+text-align: center;
 border-radius: 4.5px;
 background: #3A3A3A;
 
-position: relative;
-top: 500px; 
-
-}
+} 
 
 .FAQDrop .label2{
     color: #B5B5B5;
-/* text-align: justify; */
 font-family: Questrial;
-font-size: 13.5px;
+font-size: 15.5px;
 font-style: normal;
 font-weight: 400;
-line-height: 19.125px; /* 141.667% */
-letter-spacing: 0.675px;
-}
+line-height: 19.125px; 
+letter-spacing: 0.775px;
+padding: 20px;
+} 
+
+
+
 
