FIX: fixed the responsivness of blogs

--- a/clientBlogs/src/components/css/TrendingBlogCard.css
+++ b/clientBlogs/src/components/css/TrendingBlogCard.css
@@ -2,7 +2,7 @@
     border-radius: 10px;
     background-color: #2F2F2F;
     min-width: 100%;
-    height: 531px;
+    /* height: 531px; */
     margin: auto;
     margin-top: 1rem;
     border: 1px solid #414141;
