--- a/clientBlogs/src/components/css/BlogCard.css
+++ b/clientBlogs/src/components/css/BlogCard.css
@@ -5,7 +5,8 @@
     border-radius: 10px;
     background-color: #2F2F2F;
     min-width: 100%;
-    height: 100%;
+    min-height: 100%;
+    height:auto;
     margin-top: 1;
     border: 1px solid #414141;
 }
