--- a/clientBlogs/src/pages/css/CommuneWelcome.css
+++ b/clientBlogs/src/pages/css/CommuneWelcome.css
@@ -4,6 +4,7 @@
     align-items: center;
     justify-content: center;
     height: 94vh;
+    margin: 6% 0;
 }
 
 .settingCotainer .greyBox {
@@ -48,15 +49,18 @@
 .settingCotainer .greyBox .imageContainer .name {
     color: white;
     font-size: 20px;
+    text-align: center;
 }
 
 .settingCotainer .greyBox .imageContainer .email {
     color: #676767;
     font-size: 15px;
+    text-align: center;
 }
 
 .settingCotainer .greyBox .detailsContainer {
     height: auto;
+    width: 100%;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -77,15 +81,18 @@
 .settingCotainer .greyBox .detailsContainer .top .title {
     color: white;
     font-size: 36px;
+    text-align: center;
 }
 
 .settingCotainer .greyBox .detailsContainer .top .subtitle {
     color: #898989;
     font-size: 15px;
+    text-align: center;
 }
 
 .settingCotainer .greyBox .detailsContainer .mid {
     height: auto;
+    width: 100%;
     display: flex;
     flex-direction: row;
     align-items: center;
@@ -97,6 +104,7 @@
 
 .settingCotainer .greyBox .detailsContainer .mid .btn1 {
     height: auto;
+    width: 50%;
     display: flex;
     flex-direction: row;
     align-items: center;
@@ -110,6 +118,7 @@
 
 .settingCotainer .greyBox .detailsContainer .mid .btn2 {
     height: auto;
+    width: 50%;
     display: flex;
     flex-direction: row;
     align-items: center;
@@ -127,4 +136,18 @@
     margin: 20px 0px;
     font-size: 15px;
     color: #FFFFFF;
+}
+
+
+/**************************************************************************/
+
+
+@media screen and (max-width:425px) {
+    .settingCotainer{
+        margin: 20% 0;
+    }
+
+    .settingCotainer .greyBox{
+        width: 85vw;
+    }
 }
