--- a/clientBlogs/src/pages/css/Connect.css
+++ b/clientBlogs/src/pages/css/Connect.css
@@ -95,7 +95,7 @@
     display: flex;
     width: 30vw;
     height: 60vh;
-  
+
     flex-direction: column;
     justify-content: center;
     align-items: center;
@@ -261,7 +261,8 @@
 .frame65 {
     /* display: flex; */
     width: 25vw;
-    height:10vh ;
+    min-height: 11vh;
+    height: auto;
     /* padding: 18px 26px 24px 26px; */
     /* justify-content: center; */
     /* align-items: center; */
@@ -490,7 +491,9 @@
 
 }
 
-.text2,.text4, .text6 {
+.text2,
+.text4,
+.text6 {
     flex-shrink: 0;
     color: #FFF;
     font-family: Roboto;
@@ -542,17 +545,18 @@
 
 @media only screen and (min-width: 320px) and (max-width:1023px) {
 
-    .section{
+    .section {
         width: 100vw;
         height: 60vh;
 
     }
+
     .buttons_top {
         flex-direction: column;
 
     }
 
-  
+
 
     .btn1,
     .btn2 {
@@ -561,12 +565,13 @@
         /* height: 100px; */
         align-items: center;
     }
+
     .box1 {
         width: 100vw;
         height: max-content;
         padding: 20px;
         gap: 200px;
-     
+
     }
 
     .middlepart {
@@ -625,7 +630,7 @@
         line-height: normal;
         width: 80vw;
         height: 50px;
-        padding: 20px 151px 0px 25px;
+        padding: 10px 151px 0px 25px;
         margin-left: 20px;
 
     }
@@ -638,11 +643,11 @@
     .cont {
 
         /* margin-left: 40px; */
-        width:80vw;
+        width: 80vw;
         height: 50px;
     }
 
-    .lowerbox{
+    .lowerbox {
         width: 80vw;
         /* height: 80vh; */
         /* max-height: fit-content; */
@@ -652,13 +657,13 @@
 
     .ch2 {
         width: 17hw;
-        height: 10vh;
+        height: auto;
     }
 
     .connect {
         font-size: 25px;
-        height: 38px;
-        /* margin-left: 80px; */
+        height: auto;
+        margin-top: 0px !important;
         width: 80vw;
         margin-top: 15px;
 
@@ -666,7 +671,7 @@
 
 
     .frame65 {
-        
+
         width: 90vw;
         /* height:15vh; */
         /* height: fit-content; */
@@ -676,6 +681,7 @@
 
     .text {
         font-size: 14px;
+        padding:10px;
     }
 
     .frame67 input {
@@ -685,7 +691,7 @@
         /* margin-left: 30px; */
     }
 
-   
+
     .frame66 {
         width: 85vw;
         /* height: 16vw;x */
@@ -734,6 +740,10 @@
         margin-left: -10px;
     }
 
+    .cont {
+        font-size: 17px;
+    }
+
     .frame70 {
         width: 40vw;
         padding: 5px 50.8px 5.8px 60px;
@@ -749,7 +759,7 @@
 
     .box2 {
         width: 100vw;
-        max-height:max-content;
+        max-height: max-content;
         padding: 0px;
     }
 
@@ -791,7 +801,7 @@
         font-size: 20px;
         font-weight: 500;
         width: 80vw;
-     
+
 
     }
 
@@ -802,7 +812,7 @@
         font-weight: 300;
         letter-spacing: 0.6px;
         /* width: 90vw; */
-  
+
         word-wrap: break-word;
     }
 
