--- a/clientBlogs/src/pages/css/Home.css
+++ b/clientBlogs/src/pages/css/Home.css
@@ -1,6 +1,6 @@
 .section {
     max-height: 100vh;
-    max-width:100vw;
+    max-width: 100vw;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -176,7 +176,7 @@
 .whoAreWeContainer .imagePanel>img {
     object-fit: cover;
     width: 100%;
-    /* height: 100vh; */
+    height: 100vh;
 }
 
 .welcomeSection {
@@ -216,7 +216,7 @@
     color: rgba(247, 77, 121, 1) !important;
     font-size: 41px !important;
     font-family: "Questrial" !important;
-    font-weight: 400 ;
+    font-weight: 400;
     line-height: 42px !important;
     letter-spacing: 0.05em !important;
 
@@ -235,43 +235,44 @@
     letter-spacing: 0.05em !important;
 }
 
-@media only screen and (min-width: 320px) and (max-width:767px){
+@media only screen and (min-width: 320px) and (max-width:767px) {
 
     .heroLandingImage {
-         object-fit: cover;
-        width: 100vw; 
+        object-fit: cover;
+        width: 100vw;
         height: fit-content;
-    
-    
+
+
     }
+
     .carouselSection {
         min-height: 100vh;
         width: 100vw;
     }
-    
-     .carouselContentContainer {
+
+    .carouselContentContainer {
         width: 85%;
         gap: 5px;
         transform: translateY(10px);
     }
-    
+
     .carouselSection .carouselContentBtn {
         font-size: 16px;
         width: 70vw;
         height: 4vh;
         line-height: 29px;
-    
+
     }
-    
-     .carouselDisplayText {
-     
+
+    .carouselDisplayText {
+
         width: 80%;
         font-size: 20px;
         gap: 10px;
         font-weight: 300;
         line-height: 30px;
-     
-    
+
+
     }
 
     .whoAreWeContainer {
@@ -288,133 +289,137 @@
         width: 80%;
         justify-content: center;
         align-items: center;
-        
-        
+
+
     }
-    
+
     .whoAreWeContainer .contentPanel>h2 {
-        
+
         margin-bottom: 0px;
         font-weight: 400;
         font-size: 25px;
         padding: 10px;
-        
+
     }
-    
+
     .whoAreWeContainer .contentPanel>detail {
         width: 70%;
         height: fit-content;
         margin-left: 20px;
-        padding-top: 50px; 
-        
+        padding-top: 50px;
+
         font-size: 18px;
         line-height: 25px;
-        
+
     }
-    
+
     .whoAreWeContainer .imagePanel {
         width: 100%;
         height: fit-content;
         padding: 20px;
-     
+
     }
-    
+
     .whoAreWeContainer .imagePanel>img {
         object-fit: cover;
         width: 100%;
-           height: 35vh;
-           margin-bottom: 35px;
+        height: 30vh;
+        margin-bottom: 35px;
     }
 
     .welcomeSection {
 
         width: 100%;
-        
+
         justify-content: center;
         align-items: center;
         text-align: center;
-   
+
     }
-    
+
     .welcomeSection>h2 {
         width: 90%;
-    font-weight: 300;
-    font-size: 45px;
-    line-height: 50px;
-    
+        font-weight: 300;
+        font-size: 45px;
+        line-height: 50px;
+
     }
-    
+
     .welcomeSection>detail {
         width: 70%;
-    font-weight: 400;
-    font-size: 18px; 
-    gap: 25px;
+        font-weight: 400;
+        font-size: 18px;
+        gap: 25px;
 
     }
-.blogSection{
-    max-width: 100vw;
-    min-height: 100vh;
- 
-    /* overflow: hidden; */
-}
 
-.blogHeadings{
+    .blogSection {
+        max-width: 100vw;
+        min-height: 100vh;
 
-    gap: 5px;
-}
+        /* overflow: hidden; */
+    }
 
-.trendingBlogsText{
-    font-size: 31px !important;
-    font-weight: 200;
-}
-.moreText{
-    font-size: 35px !important;
-    padding: 10px;
-    font-weight: 300 !important;
-}
+    .blogHeadings {
+        margin-top: 35px;
+        gap: 5px;
+    }
 
-.blogsBox{
-    display: flex;
-    flex-direction: column;
-     height: 75vh; 
-      /* transform: translateY(30px);  */
-} 
-
-.trendingBlog{
-    width: 100%;
-    display: none;
-}
-
-
-.horzBlogsOuter{
-    /* display: none; */
-    width: 100%;
-    /* height: fit-content; */
-
-} 
-
-
-#card {
-    height: 50vh;
-}
-
-.connect_footer{
-    max-width: 100vw;
-    min-height: fit-content;
-}
-
-.home_footer{
-    min-width: 100vw;
-    min-height: max-content;
-}
-
-
-}
-
+    .trendingBlogsText {
+        font-size: 28px !important;
+        font-weight: 200;
+    }
     
-@media only screen and (min-width: 768px) and (max-width:1024px){
+    .moreText {
+        font-size: 15px !important;
+        padding: 10px;
+        padding-right:0px !important;
+        font-weight: 300 !important;
+        text-align: end;
+    }
 
-    .heroLandingImage{
+    .blogsBox {
+        display: flex;
+        flex-direction: column;
+        height: 75vh;
+        /* transform: translateY(30px);  */
+    }
+
+    .trendingBlog {
+        width: 100%;
+        display: none;
+    }
+
+
+    .horzBlogsOuter {
+        /* display: none; */
+        width: 100%;
+        /* height: fit-content; */
+
+    }
+
+
+    #card {
+        height: 50vh;
+    }
+
+    .connect_footer {
+        max-width: 100vw;
+        min-height: fit-content;
+    }
+
+    .home_footer {
+        min-width: 100vw;
+        min-height: max-content;
+    }
+
+
+}
+
+
+@media only screen and (min-width: 768px) and (max-width:1024px) {
+
+    .heroLandingImage {
         height: fit-content;
     }
 
@@ -425,85 +430,85 @@
         width: 100%;
         gap: 20px;
     }
-    
+
     .welcomeSection>h2 {
-  
-    font-weight: 400;
-    font-size: 60px;
-    line-height: 59px;
- }
-    
-    .welcomeSection>detail {
-    font-weight: 400;
-    font-size: 30px;
-    line-height: 50px;
-     letter-spacing: 0.06em;
-     margin-top: 10px;
-   }
 
-
-.carouselSection {
-    min-height: 100vh;
-    width: 80%;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-}
-
- .carouselContentContainer {
-    display: flex;
-    width: 100%;
-    margin-left: auto ;
-    gap: 7px;
-}
-
-.carouselSection .carouselContentBtn {
-    border-radius: 30px;
-    text-transform: none;
-    font-size: 23px;
-    min-width: 25%;
-    height: 25%;
-    border: 0.83px solid rgba(71, 71, 71, 1);
-
-
-    
-
-    font-family: 'Roboto';
-    font-style: normal;
-    
-    font-size: 23.1px;
-    line-height: 27px;
-    color: #FFFFFF;
-
-    &:hover {
-        background-color: #5f5f5f;
-        
+        font-weight: 400;
+        font-size: 60px;
+        line-height: 59px;
     }
+
+    .welcomeSection>detail {
+        font-weight: 400;
+        font-size: 30px;
+        line-height: 50px;
+        letter-spacing: 0.06em;
+        margin-top: 10px;
+    }
+
+
+    .carouselSection {
+        min-height: 100vh;
+        width: 80%;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+    }
+
+    .carouselContentContainer {
+        display: flex;
+        width: 100%;
+        margin-left: auto;
+        gap: 7px;
+    }
+
+    .carouselSection .carouselContentBtn {
+        border-radius: 30px;
+        text-transform: none;
+        font-size: 23px;
+        min-width: 25%;
+        height: 25%;
+        border: 0.83px solid rgba(71, 71, 71, 1);
+
+
+
+
+        font-family: 'Roboto';
+        font-style: normal;
+
+        font-size: 23.1px;
+        line-height: 27px;
+        color: #FFFFFF;
+
+        &:hover {
+            background-color: #5f5f5f;
+
+        }
+    }
+
+    .carouselDisplayText {
+        padding: 20px 0px;
+        color: rgba(177, 177, 177, 1);
+        width: 100%;
+        margin: 0px auto;
+        font-size: 24px;
+
+
+
+
+        font-family: 'Questrial';
+        font-style: normal;
+        font-weight: 400;
+        font-size: 24px;
+        line-height: 36px;
+        letter-spacing: 0.05em;
+
+        color: #B1B1B1;
+
+
+        text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+
+    }
+
 }
-
- .carouselDisplayText {
-    padding: 20px 0px;
-    color: rgba(177, 177, 177, 1);
-    width: 100%;
-    margin: 0px auto;
-    font-size: 24px;
-
-
-   
-
-    font-family: 'Questrial';
-    font-style: normal;
-    font-weight: 400;
-    font-size: 24px;
-    line-height: 36px;
-    letter-spacing: 0.05em;
-
-    color: #B1B1B1;
-
-    
-    text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
-
-}
-
-} 
