--- a/clientBlogs/src/components/css/FAQ_box.css
+++ b/clientBlogs/src/components/css/FAQ_box.css
@@ -8,7 +8,7 @@
     border-radius: 9px;
     background: #2F2F2F;
     transform: translateY(80px);
-    margin: auto;
+    /* margin: auto; */
 
 
 }
@@ -41,11 +41,12 @@ letter-spacing: 1.013px;
 
 
  .FAQDrop .row2{
-    height: 11vh;
+    height: fit-content;
 align-items: center;
 text-align: center;
 border-radius: 4.5px;
 background: #3A3A3A;
+/* margin: auto; */
 
 } 
 
@@ -59,6 +60,19 @@ line-height: 19.125px;
 letter-spacing: 0.775px;
 padding: 20px;
 } 
+
+@media only screen and (min-width:320px ) and (max-width:1023px){
+
+    .FAQ_ques .row1{
+        width: 86vw;
+    }
+    .FAQ_ques .whatis ,.FAQ_ques .collabhous{
+        font-size: 18px;
+    }
+    .FAQDrop .label2{
+        font-size: 13px;
+    }
+}
 
 
 
