--- a/clientBlogs/src/pages/css/FAQ.css
+++ b/clientBlogs/src/pages/css/FAQ.css
@@ -1,81 +1,4 @@
-/* .FAQcontainer{
-    display: flex;
-    flex-direction: column;
-    height: 100vh;
-    width: 100vw;
-    gap: 10px;
-  
-}
 
-
-
-
-
-
-
-
-
-.FAQ_ques .row1{
-    justify-content: space-between;
-    width:60vw;
-    height: 7vh;
-    border-radius: 9px;
-    background: #2F2F2F;
-    transform: translateY(80px);
-    margin: auto;
-
-
-}
-.FAQ_ques .label1{
-padding: 10px;
-}
-
-.FAQ_ques .whatis{
-    color: #636363;
-text-align: justify;
-font-family: Roboto;
-font-size: 20.25px;
-font-style: normal;
-font-weight: 700;
-line-height: normal;
-letter-spacing: 1.013px;
-}
-
-.FAQ_ques .collabhous{
-    color: #F74D79;
-font-family: Roboto;
-font-size: 20.25px;
-font-style: normal;
-font-weight: 700;
-line-height: normal;
-letter-spacing: 1.013px;
-}
-
-    .FAQDrop{
-        position: relative;
-    }
-
- .FAQDrop .row2{
-    width: 60vw;
-    height: 10vh;
-align-items: center;
-border-radius: 4.5px;
-background: #3A3A3A;
-
-position: relative;
-top: 50px; 
-
-}
-
-.FAQDrop .label2{
-    color: #B5B5B5;
-font-family: Questrial;
-font-size: 13.5px;
-font-style: normal;
-font-weight: 400;
-line-height: 19.125px;
-letter-spacing: 0.675px;
-} */
 .FAQcontainer{
     display: flex;
     flex-direction: column;
@@ -95,7 +18,15 @@ transform: translateY(60px);
     display: flex;
     flex-direction: column;
     gap:10px;
+    align-items: center;
+    text-align: center;
 }
 .FAQtext{
     position: relative;
+}
+
+@media only screen and (min-width:320px ) and (max-width:1023px){
+    .FAQtext{
+        font-size: 30px;
+    }
 }
