--- a/clientBlogs/src/components/css/FAQ_box.css
+++ b/clientBlogs/src/components/css/FAQ_box.css
@@ -1,23 +1,15 @@
-.FAQ_ques .row1{
-    display: flex;
-    flex-direction: column;
-    gap: none;
-    justify-content: space-between;
-    width:65vw;
-    height: 7.5vh;
+ .row1{
+    /* width:65vw;
+    height: 7.5vh; */
     border-radius: 9px;
     background: #2F2F2F;
-    transform: translateY(80px);
-    /* margin: auto; */
-
-
 }
 
-.FAQ_ques .label1{
+ .label1{
     padding: 10px;
     }
 
-.FAQ_ques .whatis{
+ .whatis{
     color: #636363;
 text-align: justify;
 font-family: Roboto;
@@ -28,7 +20,7 @@ line-height: normal;
 letter-spacing: 1.013px;
 }
 
-.FAQ_ques .collabhous{
+ .collabhous{
     color: #F74D79;
 font-family: Roboto;
 font-size: 20.25px;
@@ -63,10 +55,10 @@ padding: 20px;
 
 @media only screen and (min-width:320px ) and (max-width:1023px){
 
-    .FAQ_ques .row1{
+     .row1{
         width: 86vw;
     }
-    .FAQ_ques .whatis ,.FAQ_ques .collabhous{
+     .whatis , .collabhous{
         font-size: 18px;
     }
     .FAQDrop .label2{
