FEAT: added favicon and main logo

--- a/clientBlogs/src/components/css/Header.css
+++ b/clientBlogs/src/components/css/Header.css
@@ -26,7 +26,11 @@
     font-family: 'Questrial', sans-serif;
     height: 40px !important;
 }
-
+.logoImageCont{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
 .appbar #avatarContainer {
     height: 24px;
     width: 24px;
