FEAT: added edit check

--- a/clientBlogs/src/components/css/TrendingBlogCard.css
+++ b/clientBlogs/src/components/css/TrendingBlogCard.css
@@ -2,7 +2,8 @@
     border-radius: 10px;
     background-color: #2F2F2F;
     min-width: 100%;
-    height: 531px;
+    min-height: 531px;
+    height: auto;
     margin: auto;
     margin-top: 1rem;
     border: 1px solid #414141;
