--- a/clientBlogs/src/components/css/FAQ_box.css
+++ b/clientBlogs/src/components/css/FAQ_box.css
@@ -34,7 +34,8 @@ letter-spacing: 1.013px;
     height: fit-content;
 align-items: center;
 text-align: center;
-border-radius: 4.5px;
+/* border-radius: 4.5px; */
+border-radius: 4.5px solid #3A3A3A;
 
 } 
 .FAQDrop{
