FIX: fixed the center bug of home blog section

--- a/clientBlogs/src/components/css/Header.css
+++ b/clientBlogs/src/components/css/Header.css
@@ -25,12 +25,15 @@
     opacity: 1;
     font-family: 'Questrial', sans-serif;
     height: 40px !important;
+    font-weight: 600;
 }
-.logoImageCont{
+
+.logoImageCont {
     display: flex;
     align-items: center;
     justify-content: center;
 }
+
 .appbar #avatarContainer {
     height: 24px;
     width: 24px;
