--- a/clientBlogs/src/components/css/HorzBlogCard.css
+++ b/clientBlogs/src/components/css/HorzBlogCard.css
@@ -2,8 +2,8 @@
     height: 165px;
     background-color: #2F2F2F;
     min-width: 100%;
-    margin: auto;
-    margin-top: 8px;
+    /* margin: auto; */
+    /* margin-top: 8px; */
     border: 1px solid #414141;
 }
 
