--- a/clientBlogs/src/components/css/TrendingBlogCard.css
+++ b/clientBlogs/src/components/css/TrendingBlogCard.css
@@ -3,10 +3,13 @@
     background-color: #2F2F2F;
     min-width: 100%;
     min-height: 531px;
-    height: auto;
+    height: 100%;
+    max-height:100%;
     margin: auto;
-    margin-top: 1rem;
     border: 1px solid #414141;
+}
+#card .imageCard {
+   height:50%;
 }
 
 .cardContent {
