--- a/clientBlogs/src/pages/css/Home.css
+++ b/clientBlogs/src/pages/css/Home.css
@@ -7,7 +7,7 @@
 }
 
 .blogSection {
-    /* min-height: 100vh; */
+    min-height: 100vh;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -17,36 +17,43 @@
 .blogSectionInner {
     display: flex;
     flex-direction: column;
-    width: 80vw;
+    width: auto;
 }
 
 .blogHeadings {
     display: flex;
     justify-content: space-between;
+    width: 100%;
+    max-width: 1200px;
 }
 
 .blogsBox {
     display: flex;
-    justify-content: center;
-    height: max-content;
+    justify-content: space-between;
+    height: 531px;
+    width: 100%;
+    min-height: 531px;
+    max-width: 1200px;
 }
 
 .trendingBlog {
-    width: 50%;
+    width: 49%;
+    height: 100%;
 }
 
 .horzBlogsOuter {
-    width: 50%;
+    width: 49%;
+    height: 100%;
 }
 
 .horzBlogsInner {
+    margin: 0 auto;
+    width: 100%;
     display: flex;
     flex-direction: column;
-    width: 90%;
-    margin: 0 auto;
-    margin-top: 8px;
-    gap: 10px;
-
+    justify-content: space-between;
+    gap: auto;
+    height: 100%;
 }
 
 .heroLandingImage {
@@ -165,7 +172,7 @@
 
     letter-spacing: 0.05em;
 
-    color: #FFFFFF;
+    color: #e7e7e7;
 
 }
 
@@ -206,7 +213,7 @@
     line-height: 32px;
     text-align: center;
     letter-spacing: 0.05em;
-    color: #FFFFFF;
+    color: #e7e7e7;
 
 
 }
@@ -219,16 +226,16 @@
     font-weight: 400;
     line-height: 42px !important;
     letter-spacing: 0.05em !important;
-
+    margin-bottom: 0.4em !important;
 }
 
 .moreText {
-
+    width: auto !important;
     color: white !important;
     font-size: 26px !important;
     display: flex !important;
     align-items: center !important;
-    padding-right: 40px !important;
+    /* padding-right: 40px !important; */
     font-family: "Roboto" !important;
     font-weight: 400 !important;
     line-height: 30px !important;
@@ -369,11 +376,11 @@
         font-size: 28px !important;
         font-weight: 200;
     }
-    
+
     .moreText {
         font-size: 15px !important;
         padding: 10px;
-        padding-right:0px !important;
+        padding-right: 0px !important;
         font-weight: 300 !important;
         text-align: end;
     }
@@ -382,6 +389,7 @@
         display: flex;
         flex-direction: column;
         height: 75vh;
+        max-height: 531px;
         /* transform: translateY(30px);  */
     }
 
