FIX: fixed the partnership program bug, font-size of our blog quotes

--- a/clientBlogs/src/components/css/Footer.css
+++ b/clientBlogs/src/components/css/Footer.css
@@ -1,8 +1,8 @@
 .footerContainer {
+    margin-top:5rem;
     padding-top: 3rem;
     padding-left: 6rem;
     border-top: 3px solid white;
-    /* display: none !important; */
 }
 
 .footerContainer .row2 {
