FEAT: adding number of questions completed option in the community page

--- a/clientBlogs/src/pages/css/CommuneWelcome.css
+++ b/clientBlogs/src/pages/css/CommuneWelcome.css
@@ -4,7 +4,7 @@
     align-items: center;
     justify-content: center;
     height: 94vh;
-    margin: 6% auto;
+    margin: 0px 6% auto;
     max-width:1500px;
 }
 
