--- a/clientBlogs/src/pages/css/Home.css
+++ b/clientBlogs/src/pages/css/Home.css
@@ -259,33 +259,33 @@
 
     .carouselContentContainer {
         width: 85%;
-        gap: 5px;
         transform: translateY(10px);
+        justify-content: center;
     }
 
     .carouselSection .carouselContentBtn {
-        font-size: 16px;
-        width: 70vw;
-        height: 4vh;
+        font-size: 12px;
+        width: auto;
+        height: 40px;
         line-height: 29px;
-
+        min-width: 40px;
     }
 
     .carouselDisplayText {
 
         width: 80%;
-        font-size: 20px;
+        font-size: 16px;
         gap: 10px;
         font-weight: 300;
-        line-height: 30px;
-
+        line-height: 25px;
+        text-align: justify;
 
     }
 
     .whoAreWeContainer {
         display: flex;
         flex-direction: column;
-        gap: 20px;
+        gap: 0px;
         max-height: 100vh;
         transform: translateY(40px);
         width: 100%;
@@ -302,21 +302,22 @@
 
     .whoAreWeContainer .contentPanel>h2 {
 
-        margin-bottom: 0px;
+        margin-bottom: 10px;
         font-weight: 400;
         font-size: 25px;
-        padding: 10px;
+        padding: 0px;
 
     }
 
     .whoAreWeContainer .contentPanel>detail {
         width: 70%;
         height: fit-content;
-        margin-left: 20px;
+        /* margin-left: 20px; */
         padding-top: 50px;
 
-        font-size: 18px;
+        font-size: 14px;
         line-height: 25px;
+        text-align: justify;
 
     }
 
@@ -331,7 +332,7 @@
         object-fit: cover;
         width: 100%;
         height: 30vh;
-        margin-bottom: 35px;
+        margin-bottom: 0px;
     }
 
     .welcomeSection {
@@ -355,9 +356,9 @@
     .welcomeSection>detail {
         width: 70%;
         font-weight: 400;
-        font-size: 18px;
-        gap: 25px;
-
+        font-size: 15px;
+        text-align: center;
+        line-height: 30px;
     }
 
     .blogSection {
