--- a/clientBlogs/src/pages/css/Connect.css
+++ b/clientBlogs/src/pages/css/Connect.css
@@ -9,8 +9,7 @@
     background-size: cover;
     transform-origin: bottom;
     transform: scale(1, 110%);
-
-
+    opacity: 85%;
 }
 
 .section {
@@ -47,6 +46,8 @@
     z-index: 2;
     font-size: 30px;
     font-weight: 900;
+    backdrop-filter: blur(40px);
+    box-shadow: 0px 0px 10px #e6f0ef;
 }
 
 .btn1:hover {
@@ -66,11 +67,13 @@
     border-style: solid;
     font-family: 'Roboto', sans-serif;
     line-height: auto;
-    background-color: transparent;
+    background-color: #cecece54;
     font-size: 30px;
     font-weight: 900;
     z-index: 2;
-
+    cursor: pointer;
+    backdrop-filter: blur(18px);
+    box-shadow: 0px 0px 10px #323232;
 }
 
 .middlepart {
@@ -564,7 +567,8 @@
     .btn2 {
         width: 40vw;
         font-size: 20px;
-        /* height: 100px; */
+        min-height: 8vh;
+        max-height: 100px;
         align-items: center;
     }
 
