--- a/clientBlogs/src/pages/css/Home.css
+++ b/clientBlogs/src/pages/css/Home.css
@@ -247,10 +247,8 @@
     .heroLandingImage {
         object-fit: cover;
         width: 100vw;
-        height: fit-content;
-
-
-    }
+        height: 100vh;
+}
 
     .carouselSection {
         min-height: 100vh;
